# MasterClass_GithubActions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: 01-basic-workflow.yml  02-dependencies-workflow.yml  02-ml-pipeline.yml  03-ml-pipeline.yml
src/: hello.py  train_iris.py
tests/: test_hello.py  test_train.py
