[project]
name = "masterclass-githubactions"
version = "0.1.0"
description = "Clase de GitHub Actions con ML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.1",
    "pandas>=2.2.1",
    "joblib>=1.3.2",
    "pytest>=8.1.1",
    "flake8>=7.0.0",
    "colorlog>=6.8.2"
]
