[project]
name = "masterclass-githubactions"
version = "0.1.0"
description = "MasterClass de GitHub Actions aplicado a Machine Learning"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "scikit-learn>=1.4.1",
    "pandas>=2.2.1",
    "joblib>=1.3.2",
    "colorlog>=6.8.2",
]

[dependency-groups]
dev = [
    "pytest>=8.1.1",
    "flake8>=7.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
